force-app/main/default/objects/Class__c/fields/Available_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Available_Capacity__c</fullName>
    <formula>Total_Capacity__c -  Total_Enrolment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>