force-app/main/default/objects/Class__c/fields/Centre_Name__c.field-meta.xml
<CustomField>
    <fullName>Centre_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>