force-app/main/default/objects/Class__c/fields/Class_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Date__c</fullName>
    <description>Class Date</description>
    <label>Class Date</label>
    <type>Date</type>
</CustomField>