force-app/main/default/objects/Class__c/fields/Class_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_End_Date__c</fullName>
    <description>Store the end date of the Class Record.</description>
    <label>Class End Date</label>
    <type>Date</type>
</CustomField>