force-app/main/default/objects/Class__c/fields/Class_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Start_Date__c</fullName>
    <description>Class start Date.</description>
    <label>Class Start Date</label>
    <type>Date</type>
</CustomField>