force-app/main/default/objects/Class__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <description>this fields manage class type</description>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Young Children Programme (Play group)</fullName>
            </value>
            <value>
                <fullName>Young Children Programme (Music exploration)</fullName>
            </value>
            <value>
                <fullName>Group Instrumental Lesson</fullName>
            </value>
            <value>
                <fullName>Explorer Programme</fullName>
            </value>
            <value>
                <fullName>Group Theory Lesson</fullName>
            </value>
            <value>
                <fullName>Choir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>