force-app/main/default/objects/Class__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <description>show selected package instruement name</description>
    <formula>Text(Package__r.Program__r.Instrument__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Instrument</label>
    <type>Text</type>
</CustomField>