force-app/main/default/objects/Class__c/fields/Is_Makeup_Class__c.field-meta.xml
<CustomField>
    <fullName>Is_Makeup_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this for only allowed makup group lessons.</description>
    <label>Is Makeup Class</label>
    <type>Checkbox</type>
</CustomField>