force-app/main/default/objects/Class__c/fields/Maximum_age__c.field-meta.xml
<CustomField>
    <fullName>Maximum_age__c</fullName>
    <description>manage enrol student maximum age</description>
    <label>Maximum age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>