force-app/main/default/objects/Class__c/fields/Minimum_age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_age__c</fullName>
    <description>manage enrol student minimum age</description>
    <label>Minimum age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>