force-app/main/default/objects/Class__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start Time of the class.</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>