force-app/main/default/objects/Class__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store the teacher that whose teacher class is this.</description>
    <label>Teacher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Classes (Account)</relationshipLabel>
    <relationshipName>Teacher</relationshipName>
    <type>Lookup</type>
</CustomField>