force-app/main/default/objects/Class__c/fields/Total_Enrolment__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrolment__c</fullName>
    <label>Total Enrolment</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>