force-app/main/default/objects/Class__c/listViews/All_Active_Class.listView-meta.xml
<ListView>
    <fullName>All_Active_Class</fullName>
    <columns>NAME</columns>
    <columns>Centre_Name__c</columns>
    <columns>Teacher__c</columns>
    <columns>Total_Capacity__c</columns>
    <columns>Class_Start_Date__c</columns>
    <columns>Class_End_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Package__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Classes</label>
</ListView>